Clean up package.json by removing scripts and dependencies
Removed unused scripts and dependencies from package.json.

--- a/package.json
+++ b/package.json
@@ -4,18 +4,13 @@
   "description": "Backend for WizCoz AI Platform",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "mongoose": "^7.5.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "openai": "^4.0.0",
-    "stripe": "^13.3.0"
+    "openai": "^4.0.0"
   },
   "engines": {
     "node": "18.x"
